<resources>
    <string name="app_name">Donation 1.5</string>
    <string name="sub_title">Welcome Homer</string>
    <string name="more_btn">More</string>
    <string name="option_des">Please Give Generously</string>
    <string name="paypal_opt">PayPal</string>
    <string name="direct_opt">Direct</string>
    <string name="amount_des">Amount</string>
    <string name="donate_btn">Donate</string>
    <string name="total" >Total so Far $0</string>
    <string name="setting_menu_opt">Setting</string>
    <string name="logout_menu_opt">Logout</string>
    <string name="fab_des">Email us</string>
</resources>